--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "dependencies": {
     "@adamite/relay": "https://github.com/adamitejs/relay.git",
-    "@adamite/sdk": "https://github.com/adamitejs/sdk.git"
+    "@adamite/sdk": "https://github.com/adamitejs/sdk.git",
+    "bcrypt": "^3.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^1.0.0",
+    "uuid": "^3.3.2"
   }
 }
