Converted to use @adamite/relay-server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --print-width 120 --write \"**/*.js\""
   },
   "dependencies": {
-    "@adamite/relay": "https://github.com/adamitejs/relay.git",
+    "@adamite/relay-server": "https://github.com/adamitejs/relay-server.git",
     "@adamite/sdk": "https://github.com/adamitejs/sdk.git",
     "bcrypt": "^3.0.6",
     "jsonwebtoken": "^8.5.1",
