--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adamite/service-auth",
-  "version": "0.0.0",
+  "version": "0.1.0-beta.0",
   "description": "Adamite auth service.",
   "main": "index.js",
   "license": "MIT",
