--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@adamite/relay-server": "^0.1.0-beta.1",
-    "@adamite/sdk": "latest",
+    "@adamite/sdk": "^0.1.0-beta.0",
     "bcrypt": "^3.0.6",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
